--- a/formulario.html
+++ b/formulario.html
@@ -4,32 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulario en html</title>
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <style>
-        table, th, td{
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-
-        th, td{
-            padding: 10px;
-        }
-
-        th{
-            text-align: left;
-        }
-    </style>
-</head>
-<body>
-    <table><center><h1>Sign in</h1></center>
-    <table>
-        <tr>
-            <th>FORMULARIO</th>
-        </tr>
-        <tr>
-            <td></td>
-        </tr>
+    <form>
+        <h2>login</h2>
+        <label>user name</label>
+        <input type="text" name="uname" placeholder="Name">
+        
+        <label>user name</label>
+        <input type="password" name="password" placeholder="Password">
+        <button type="submit">login</button>
+    </form>
 </body>
 </html>
