formulario 03 agregando color

--- a/formulario.html
+++ b/formulario.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <center><title>Login</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="imagen">
+    
+    </div>
     <form>
-        <h2>login</h2>
-        <label>user name</label>
+        <h2 style="color: rgb(176, 127, 255);">login</h2>
+        <label style="color: rgb(214, 17, 17);" style="color: rgb(0, 0, 0);">Name</label>
         <input type="text" name="uname" placeholder="Name">
         
-        <label>user name</label>
+        <label style="color: rgb(236, 24, 24);">User Name</label>
         <input type="password" name="password" placeholder="Password">
-        <button type="submit">login</button>
+        <button type="submit" style="color: rgb(230, 25, 25);">Login</button>
     </form>
 </body>
 </html>
