agregando imagen al formulario

--- a/login.form/tranajo en casa.html
+++ b/login.form/tranajo en casa.html
@@ -11,7 +11,7 @@
     
     <div class="login-box">
         <img src="img/bg.jpeg" alt="logo de FAzt">
-        <h1>login here</h1>
+        <h1>Welcome serious persons</h1>
         <form>
             <!--USERNAME-->
             <label for="username">Username</label>
