modificando para funcion de button

--- a/Login.html/login02.html
+++ b/Login.html/login02.html
@@ -13,7 +13,7 @@
         <h1 class="form-title">Delivery</h1>
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
-        <button>
+        <button type="submit">
             Log in
         </button>
     </form>    
