dando estilo a los bordes

--- a/Login.html/login02.html
+++ b/Login.html/login02.html
@@ -10,12 +10,10 @@
 <body>
 
     <form action="login02.html" class="form-box">
-        <h1 class="form-title">Delivery</h1>
+        <h1 class="form-title">food delivery</h1>
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
-        <button type="submit">
-            Log in
-        </button>
+        <button type="submit">Log in</button>
     </form>    
     
 </body>
