--- a/Login.html/login02.html
+++ b/Login.html/login02.html
@@ -14,6 +14,8 @@
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
         <button type="submit">Log in</button>
+        <a href="olvidaste tu contraseña.html">olvidaste tu contaseña</a>
+        <a href="crear nueva cuenta.html">crear nueva cuenta</a>
     </form>    
     
 </body>
