--- a/exsercise03.html/index03.html
+++ b/exsercise03.html/index03.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style03.css">
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <title>Login inicializet</title>
 </head>
 <body>
@@ -18,17 +20,24 @@
                 </div>
                 <div class="input-group">
                     <div class="input-field">
-                        <input type="text" class="input-box" id="LongEmail" required>
-                        <label for="LongEmail">Email address</label>
+                        <input type="text" class="input-box" id="LogEmail" required>
+                        <label for="LogEmail">Email address</label>
                     </div>
                     <div class="input-field">
                             <input type="Password" class="input-box" id="LogPassword" required>
                             <label for="LogPassword">Password</label>
-                        </div>
+                            <div class="eye-area">
+                                    <div class="eye-box" onclick="mylogPasword">
+                                        <1 class="fa-regular fa-eye" id="eye"></1>
+                                        <1 class="fa-regular fa-eye-slash" id="eye-slash"></1>                          
+
+                                    </div>
+                         </div>
+                    </div>
                 </div>
+            
             </div>
         </div>
-    </div>
-    
+    </div> 
 </body>
 </html>
