--- a/Login.html/login02.html
+++ b/Login.html/login02.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
+<!--seleccionamos en el idioma que sera leido nuestro editor-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LoginPuri</title>
+    <!--añadimos el link de css para html-->
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
+<body> 
+<!--introducimos las funcionalidades que se darán-->
     <form action="login02.html" class="form-box">
+        <!--introducimos el titulo o de la forma de como será llamado nuestro proyecto-->
         <h1 class="form-title">food delivery</h1>
+        <!--añadimos el formulario para el nombre-->
         <input type="text" placeholder="Username">
+        <!--introducimos el formulario para la contraseña-->
         <input type="password" placeholder="Password">
         <button type="submit">Log in</button>
+        <!--agregamos enlaces aleatorios para recuperar cuenta-->
         <a href="olvidaste tu contraseña.html">olvidaste tu contaseña</a>
         <a href="crear nueva cuenta.html">crear nueva cuenta</a>
     </form>    
